--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Dependency libraries used for the RRG:\n",
+    "## Dependency libraries used for the SRG:\n",
     "import numpy as np\n",
     "import networkx as nx\n",
     "import scipy as spy\n",
