--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,14 +386,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1144124/835652801.py:100: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
+      "/tmp/ipykernel_1526870/1876697926.py:100: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
       "  A=nx.adjacency_matrix(G).toarray()\n"
      ]
     },
@@ -401,22 +401,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['our method: tau is ', 2.6086304875106583, '!!']\n",
-      "(5, 5)\n",
-      "(5, 5)\n",
-      "(5, 5)\n",
-      "(5, 5)\n",
-      "[0, [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 46, 47, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221, 222, 223, 224, 225, 226, 227, 228, 229, 230, 231, 232, 233, 234, 235, 236, 237, 238, 239, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 250, 251, 252, 253, 254, 255, 256, 257, 258, 259, 260, 261, 262, 263, 264, 265, 266, 267, 268, 269, 270, 271, 272, 273, 274, 275, 276, 277, 278, 280, 282, 283, 284, 285, 286, 287, 288, 289, 290, 291, 292, 293, 294, 295, 296, 297, 298, 299]]\n",
-      "[[[0, [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 46, 47, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221, 222, 223, 224, 225, 226, 227, 228, 229, 230, 231, 232, 233, 234, 235, 236, 237, 238, 239, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 250, 251, 252, 253, 254, 255, 256, 257, 258, 259, 260, 261, 262, 263, 264, 265, 266, 267, 268, 269, 270, 271, 272, 273, 274, 275, 276, 277, 278, 280, 282, 283, 284, 285, 286, 287, 288, 289, 290, 291, 292, 293, 294, 295, 296, 297, 298, 299]], [43, [43]], [48, [48]], [279, [279]], [281, [281]]]]\n"
+      "['our method: tau is ', 3.2311082670700304, '!!']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1144124/835652801.py:141: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
+      "/tmp/ipykernel_1526870/1876697926.py:141: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
       "  Origin_Ap=nx.adjacency_matrix(Origin_Gp).toarray()\n",
-      "/tmp/ipykernel_1144124/835652801.py:169: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
+      "/tmp/ipykernel_1526870/1876697926.py:169: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
       "  Origin_SAq=nx.adjacency_matrix(SGq).toarray()\n"
      ]
     },
@@ -424,17 +418,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['our method: tau is ', 2.841764885639019, '!!']\n",
+      "['our method: tau is ', 4.1771324310625575, '!!']\n",
       "['our method: tau is ', 12.710445049387584, '!!']\n",
-      "(164, 164)\n",
-      "(161, 161)\n",
-      "(161, 161)\n",
-      "(161, 161)\n",
-      "['our method: tau is ', 14.451872596765016, '!!']\n",
-      "(300, 300)\n",
-      "(299, 299)\n",
-      "(298, 298)\n",
-      "(298, 298)\n"
+      "['our method: tau is ', 12.710445049387584, '!!']\n",
+      "['our method: tau is ', 0.8947832413665353, '!!']\n"
      ]
     }
    ],
@@ -449,14 +436,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1144124/2469768412.py:100: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
+      "/tmp/ipykernel_1526870/1876697926.py:100: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
       "  A=nx.adjacency_matrix(G).toarray()\n"
      ]
     },
@@ -464,18 +451,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['our method: tau is ', 4.359794641269904, '!!']\n",
-      "(36, 36)\n",
-      "(28, 28)\n"
+      "['our method: tau is ', 3.2311082670700304, '!!']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1144124/2469768412.py:141: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
+      "/tmp/ipykernel_1526870/1876697926.py:141: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
       "  Origin_Ap=nx.adjacency_matrix(Origin_Gp).toarray()\n",
-      "/tmp/ipykernel_1144124/2469768412.py:169: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
+      "/tmp/ipykernel_1526870/1876697926.py:169: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
       "  Origin_SAq=nx.adjacency_matrix(SGq).toarray()\n"
      ]
     },
@@ -483,16 +468,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(28, 28)\n",
-      "(28, 28)\n",
-      "(300, 300)\n",
-      "(300, 300)\n",
-      "(300, 300)\n",
-      "(300, 300)\n",
-      "(300, 300)\n",
-      "(300, 300)\n",
-      "(300, 300)\n",
-      "(300, 300)\n"
+      "['our method: tau is ', 8.284816004928391, '!!']\n",
+      "['our method: tau is ', 31.22513507247226, '!!']\n",
+      "['our method: tau is ', 31.22513507247226, '!!']\n",
+      "['our method: tau is ', 1.315248884653229, '!!']\n"
      ]
     }
    ],
@@ -522,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4
  },
